--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "chart.js": "^4.4.3",
     "vue": "^3.4.29",
     "vue-chart-3": "^3.1.8",
-    "vue-chartjs": "^5.3.1"
+    "vue-chartjs": "^5.3.1",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
